--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -27,6 +27,11 @@
                                     <version>3.1.0</version>
                                 </artifactItem>
                                 <artifactItem>
+                                    <groupId>com.google.guava</groupId>
+                                    <artifactId>guava</artifactId>
+                                    <version>16.0.1</version>
+                                </artifactItem>
+                                <artifactItem>
                                     <groupId>com.typesafe.akka</groupId>
                                     <artifactId>akka-actor_2.10</artifactId>
                                     <version>2.3.4</version>
