--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -32,6 +32,36 @@
                                     <version>16.0.1</version>
                                 </artifactItem>
                                 <artifactItem>
+                                    <groupId>io.netty</groupId>
+                                    <artifactId>netty-common</artifactId>
+                                    <version>4.0.37.Final</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>io.netty</groupId>
+                                    <artifactId>netty-transport</artifactId>
+                                    <version>4.0.37.Final</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>io.netty</groupId>
+                                    <artifactId>netty-buffer</artifactId>
+                                    <version>4.0.37.Final</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>io.netty</groupId>
+                                    <artifactId>netty-codec</artifactId>
+                                    <version>4.0.37.Final</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>io.netty</groupId>
+                                    <artifactId>netty-handler</artifactId>
+                                    <version>4.0.37.Final</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>io.dropwizard.metrics</groupId>
+                                    <artifactId>metrics-core</artifactId>
+                                    <version>3.1.2</version>
+                                </artifactItem>
+                                <artifactItem>
                                     <groupId>com.typesafe.akka</groupId>
                                     <artifactId>akka-actor_2.10</artifactId>
                                     <version>2.3.4</version>
