--- a/distrib/pom.xml
+++ b/distrib/pom.xml
@@ -22,6 +22,16 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
+                                    <groupId>org.slf4j</groupId>
+                                    <artifactId>slf4j-api</artifactId>
+                                    <version>1.7.5</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.slf4j</groupId>
+                                    <artifactId>slf4j-simple</artifactId>
+                                    <version>1.7.5</version>
+                                </artifactItem>
+                                <artifactItem>
                                     <groupId>com.datastax.cassandra</groupId>
                                     <artifactId>cassandra-driver-core</artifactId>
                                     <version>3.1.0</version>
