--- a/tradeworkflow/boapp/pom.xml
+++ b/tradeworkflow/boapp/pom.xml
@@ -4,7 +4,7 @@
     
     <parent>
          <groupId>net.echinopsii.ariane.community.scenarios</groupId>
-	 <artifactId>net.echinopsii.ariane.community.scenarios.tradeworkflow</artifactId>
+	     <artifactId>net.echinopsii.ariane.community.scenarios.tradeworkflow</artifactId>
          <version>0.3.0-SNAPSHOT</version>
          <relativePath>..</relativePath>
     </parent>
@@ -25,6 +25,11 @@
             <groupId>net.echinopsii.ariane.community.scenarios.commons</groupId>
             <artifactId>net.echinopsii.ariane.community.scenarios.commons.cassandra-connector</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
