--- a/tradeworkflow/feederapp/pom.xml
+++ b/tradeworkflow/feederapp/pom.xml
@@ -22,6 +22,11 @@
             <version>${version.ariane.messaging}</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
